tests/paczka1/fuzzy1/96250821.err
Error in line 2: XalTaiA A333 81,7
Error in line 8: bhHtC S563 21,2
Error in line 9: bhHtC S750 17,7
Error in line 18: S563 S687 19,0
Error in line 20: S563 S750 22,3
Error in line 16: 1Pdh1 S687 36,1
Error in line 38: bhHtC S75
Error in line 39:  1,7
Error in line 35: bhHtC S750 4,0
